made change in font

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 
 
-.font {
-    font-family: 'OpenSans+Regular', serif;
+body {
+    font-family: 'Open Sans', sans-serif;
+    color: pink;
     }
