--- a/css/styles.css
+++ b/css/styles.css
@@ -102,7 +102,7 @@ body {
 
     .footer {
         text-align: center;
-        width: 90%;
+        width: 100%;
 
     }
 
@@ -115,7 +115,12 @@ body {
 
 @media (min-width: 768px){
 
-  
+  .contact-text {
+     text-align: center;
+     width: 40%;
+     display: inline-block;
+
+  }
   
   
   
@@ -176,6 +181,11 @@ body {
     height: 400px;
 }
 
+.skills {
+    height: 400px;
+}
+
+
 }
        
 
@@ -189,8 +199,11 @@ body {
      .person {
         max-width: 80%;
         text-align: center; 
-        margin: auto;
+      
+       
      }
+
+    
 
      .top-row{
          width: 33.3%;
