--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,13 @@
 }
 
 /* base styles /////////*/
+
+
+ul {
+    padding-left: 0;
+}
+
+
 h1,
 h2 {
     text-align: center;
@@ -65,7 +72,7 @@ body {
 .footer-nav li {
     text-align: center;
     list-style: none;
-    width: 90%;
+ 
 
 }
 
@@ -189,62 +196,53 @@ body {
     float: right;
 }
 
+
+  .footer-nav {
+      text-align: right;
+  }
+
+  .bottom-name {
+      line-height: 0;
+  }
+
 }
        
-
-@media (min-width: 1024px){
-
+@media (min-width: 1024px) {
+    
     .image {
-        width: 100%;
+      max-width: 100%;
+    }
+   
+    .person {
+      max-width: 80%;
+      text-align: center;
+    }
+   
+    .top-row {
+      width: 33.3%;
+      float: left;
+    }
+   
+    .bottom-row {
+      width: 33.3%;
+      float: left;
+    }
+   
+    .name,
+    .main-nav li {
+      display: inline;
+    }
     
-       }
-
-     .person {
-        max-width: 80%;
-        text-align: center; 
-      
-       
-     }
-
-    
-
-     .top-row{
-         width: 33.3%;
-         float: left;
-        
-        
-     }
-
-     .bottom-row {
-            width: 33.3%;
-            float: left;
-           
-
-     }
-
-    
-
-       
-
-     .name ,
-     .main-nav,
-     .main-nav li {
-         display: inline;
-
-     }
-
-     .name {
-        margin-right: 300px;
-
-     }
-     
-    
-
-     .bottom-name {
-        margin-right: 300px;
-       
-
-     }
+    .name {
+      float: left;
+      margin: 0;
+      line-height: 1;
+    }
+   
+    .main-nav {
+      text-align: right;
+    }
+  }
 
 
 
@@ -254,6 +252,4 @@ body {
 
 
 
-
-}
 
